# pyo3-experiment

./: .gitignore  Cargo.toml  pyproject.toml  speed-experiment.ipynb
src/: lib.rs  main.rs  packages_2.rs
sub-modules-experiement/: Cargo.toml  pyproject.toml
sub-modules-experiement/src/: lib.rs
try-python-class/: Cargo.toml  pyproject.toml
try-python-class/src/: lib.rs
